--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     stages {
         stage('Create Stack') {
             steps {
-            sh "aws cloudformation create-stack --stack-name s3bucket --template-body file://s3cft.json --region 'us-east-1'"
+            sh "aws cloudformation create-stack --stack-name s3bucket --template-body file://cloud.json --region 'us-west-1'"
               }
              }
             }
